# plasmoid-ultimate-gmail-feed

./: CMakeLists.txt  Messages.sh  README.md  build.sh  ultimategmailfeed.notifyrc
icons/: CMakeLists.txt
package/: metadata.desktop  metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: CompactRepresentation.qml  FullRepresentation.qml  MessageDelegate.qml  configAdvanced.qml  configGeneral.qml  configUpdater.qml  main.qml
plugin/: CMakeLists.txt  networkstatus.cpp  networkstatus.h  notification.cpp  notification.h  qmldir  ultimategmailfeedplugin.cpp  ultimategmailfeedplugin.h
po/: CMakeLists.txt  plasma_applet_org.kde.plasma.ultimategmailfeed_fr.po  plasma_applet_org.kde.plasma.ultimategmailfeed_hu.po  plasma_applet_org.kde.plasma.ultimategmailfeed_it.po  plasma_applet_org.kde.plasma.ultimategmailfeed_nl.po  plasma_applet_org.kde.plasma.ultimategmailfeed_ru.po  plasma_applet_ultimategmail-feed.pot
